[package]
name = "devp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = { version = "1.0.71", features = ["std"] }
array-init = "2.1.0"
arrayvec = "0.7.4"
async-stream = "0.3.5"
async-trait = "0.1.70"
auto_impl = "1.1.0"
block-padding = "0.3.3"
byteorder = "1.4.3"
bytes = "1.4.0"
chrono = "0.4.26"
cidr = "0.2.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
ctr = "0.9.2"
data-encoding = "2.4.0"
derive_more = "0.99.17"
digest = "0.10.7"
educe = "0.4.22"
enr = { version = "0.8.1", features = ["rust-secp256k1"] }
secp256k1 = { version = "0.27.0", features = [ "global-context", "rand-std", "recovery" ] }
enum-primitive-derive = "0.2.2"
ethereum-types = "0.14.1"
fastrlp = { version = "0.3.1", features = [ "derive", "ethereum-types", "std" ] }
futures = "0.3.28"
generic-array = "0.14.7"
hex = "0.4.3"
hmac = "0.12.1"
igd = { version = "0.12.1", features = [ "aio" ] }
lru = "0.10.1"
maplit = "1.0.2"
num-traits = "0.2.15"
parking_lot = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
snap = "1.1.0"
task-group = { git = "https://github.com/piyanggoon/task-group" }
thiserror = "1.0.41"
tokio = { version = "1.29.1", features = [ "full" ] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
trust-dns-resolver = "0.22.0"
typenum = "1.16.0"
url = "2.4.0"
uuid = { version = "1.4.0", features = [ "v4" ] }

[dev-dependencies]
hex-literal = "0.4.1"
proptest = "1.2.0"
